manifest/rails-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: shubham554/ruby-app:v4  # Replace with your application image
        ports:
        - containerPort: 3000  # Adjust according to your application's port
        imagePullPolicy: Always
