manifest/rails-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: app-deployment
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: myapp
  type: ClusterIP
status:
  loadBalancer: {}
