manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gogs-ingress
spec:
  rules:
  - host: demo.ing.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-deployment
            port:
              number: 3000
